gccida/c1/legitimize_pic_address
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/legitimize_pic_address/src/i386.c:5485:4: error: expected ';' after expression
rtx v19; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/legitimize_pic_address/src/i386.c:5485:5: error: use of undeclared identifier 'v19'
rtx v19; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/legitimize_pic_address/src/i386.c:5493:4: error: expected ';' after expression
rtx v27; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/legitimize_pic_address/src/i386.c:5493:5: error: use of undeclared identifier 'v27'
rtx v27; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/legitimize_pic_address/src/i386.c:5498:4: error: expected ';' after expression
rtx v32; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/legitimize_pic_address/src/i386.c:5498:5: error: use of undeclared identifier 'v32'
rtx v32; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/legitimize_pic_address/src/i386.c:5504:38: error: use of undeclared identifier 'machine_mode'
if ( local_symbolic_operand( orig, ( machine_mode)reg) ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/legitimize_pic_address/src/i386.c:5527:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v22 = (  struct rtx_def *)rtx[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/legitimize_pic_address/src/i386.c:5528:37: error: use of undeclared identifier 'machine_mode'
if ( local_symbolic_operand( v21, ( machine_mode)reg) && *( _WORD *)v22 == 54 ) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/legitimize_pic_address/src/i386.c:5535:30: error: use of undeclared identifier 'machine_mode'
v5 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), v24, v22); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/legitimize_pic_address/src/i386.c:5538:30: error: use of undeclared identifier 'machine_mode'
v7 = gen_rtx_fmt_e( CONST, ( machine_mode)( 5 - v6), v5); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/legitimize_pic_address/src/i386.c:5541:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/legitimize_pic_address/src/i386.c:5559:39: error: expected expression
v32 = legitimize_pic_address( *( rtx *)&rtx[1], v31); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/legitimize_pic_address/src/i386.c:5559:1: error: use of undeclared identifier 'v32'
v32 = legitimize_pic_address( *( rtx *)&rtx[1], v31); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/legitimize_pic_address/src/i386.c:5560:17: error: use of undeclared identifier 'v32'
if ( *( _WORD *)v32 == 75 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/legitimize_pic_address/src/i386.c:5562:22: error: use of undeclared identifier 'v32'
v34 = **( _DWORD **)&v32[1]; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/legitimize_pic_address/src/i386.c:5569:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/legitimize_pic_address/src/i386.c:5571:1: error: use of undeclared identifier 'v32'
v32->fld[0].rtx); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/legitimize_pic_address/src/i386.c:5572:1: error: use of undeclared identifier 'v32'
v32 = ( rtx)v32[1]; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/legitimize_pic_address/src/obj/i386.o] Error 1
